// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainSprayBg applies custom className if provided 1`] = `
<DocumentFragment>
  <img
    alt=""
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 z-[-1] select-none overflow-hidden object-cover blur-2xl left-[200px] top-[100px]"
    data-nimg="1"
    data-testid="main-spray-bg-test-id"
    decoding="async"
    height="200"
    loading="lazy"
    src="/images/backgrounds/spray.svg"
    style="color: transparent;"
    width="100"
  />
</DocumentFragment>
`;

exports[`MainSprayBg renders an img with correct default attributes 1`] = `
<DocumentFragment>
  <img
    alt=""
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 z-[-1] select-none overflow-hidden object-cover blur-2xl"
    data-nimg="1"
    data-testid="main-spray-bg-test-id"
    decoding="async"
    height="200"
    loading="lazy"
    src="/images/backgrounds/spray.svg"
    style="color: transparent;"
    width="100"
  />
</DocumentFragment>
`;
